{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 520,
  "lineage": "d30ec978-c246-706e-2b01-e8b136ad4b60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0743e575295361328",
            "arn": "arn:aws:ec2:us-west-2:381491941013:elastic-ip/eipalloc-0743e575295361328",
            "domain": "vpc",
            "id": "eipalloc-0743e575295361328",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-218-137-181.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.137.181",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-nat-eip"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:internet-gateway/igw-01a9a34f6d7aa20c5",
            "id": "igw-01a9a34f6d7aa20c5",
            "owner_id": "381491941013",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-igw"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-igw"
            },
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:loadbalancer/app/dynamodb-homework7-alb/c2f718552d4c9b12",
            "arn_suffix": "app/dynamodb-homework7-alb/c2f718552d4c9b12",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dynamodb-homework7-alb-1840035908.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:381491941013:loadbalancer/app/dynamodb-homework7-alb/c2f718552d4c9b12",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dynamodb-homework7-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0336c4a7f297388a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004b2eadc57aaed5f"
              },
              {
                "subnet_id": "subnet-07c2447cca86c183f"
              }
            ],
            "subnets": [
              "subnet-004b2eadc57aaed5f",
              "subnet-07c2447cca86c183f"
            ],
            "vpc_id": "vpc-08ce70ffd5eb88801",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:loadbalancer/app/dynamodb-homework7-alb/c2f718552d4c9b12"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:listener/app/dynamodb-homework7-alb/c2f718552d4c9b12/c22c98fad465d62d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:targetgroup/dynamodb-shopping-cart-api/dadc75f49071f6db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:381491941013:listener/app/dynamodb-homework7-alb/c2f718552d4c9b12/c22c98fad465d62d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:loadbalancer/app/dynamodb-homework7-alb/c2f718552d4c9b12",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:listener/app/dynamodb-homework7-alb/c2f718552d4c9b12/c22c98fad465d62d"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.shopping_cart_api",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "shopping_cart_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:targetgroup/dynamodb-shopping-cart-api/dadc75f49071f6db",
            "arn_suffix": "targetgroup/dynamodb-shopping-cart-api/dadc75f49071f6db",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:381491941013:targetgroup/dynamodb-shopping-cart-api/dadc75f49071f6db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dynamodb-shopping-cart-api",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:381491941013:targetgroup/dynamodb-shopping-cart-api/dadc75f49071f6db"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0743e575295361328",
            "association_id": "eipassoc-07e8334d72c92ffcc",
            "connectivity_type": "public",
            "id": "nat-0b9120b4a93eab3fa",
            "network_interface_id": "eni-0e4d6f8609fc67d08",
            "private_ip": "10.1.1.35",
            "public_ip": "54.218.137.181",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004b2eadc57aaed5f",
            "tags": {
              "Name": "dynamodb-homework7-nat"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:route-table/rtb-02227d2fc6b8c051e",
            "id": "rtb-02227d2fc6b8c051e",
            "owner_id": "381491941013",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9120b4a93eab3fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dynamodb-homework7-private-rt"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "rtb-02227d2fc6b8c051e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:route-table/rtb-01406bb2436e53893",
            "id": "rtb-01406bb2436e53893",
            "owner_id": "381491941013",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a9a34f6d7aa20c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dynamodb-homework7-public-rt"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "rtb-01406bb2436e53893",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0755694fcb41a1580",
            "region": "us-west-2",
            "route_table_id": "rtb-02227d2fc6b8c051e",
            "subnet_id": "subnet-07a0f6a2b7f39404d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a93be7503f654dab",
            "region": "us-west-2",
            "route_table_id": "rtb-02227d2fc6b8c051e",
            "subnet_id": "subnet-0d84f049ab9f23ef4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a21cb0018c4a5416",
            "region": "us-west-2",
            "route_table_id": "rtb-01406bb2436e53893",
            "subnet_id": "subnet-004b2eadc57aaed5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dbcf678f351cad3",
            "region": "us-west-2",
            "route_table_id": "rtb-01406bb2436e53893",
            "subnet_id": "subnet-07c2447cca86c183f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:security-group/sg-0336c4a7f297388a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0336c4a7f297388a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dynamodb-homework7-alb-20251129023709728400000001",
            "name_prefix": "dynamodb-homework7-alb-",
            "owner_id": "381491941013",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "sg-0336c4a7f297388a1",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:security-group/sg-03e725c8400017f95",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e725c8400017f95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0336c4a7f297388a1"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dynamodb-homework7-ecs-tasks-20251129023712506300000003",
            "name_prefix": "dynamodb-homework7-ecs-tasks-",
            "owner_id": "381491941013",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "sg-03e725c8400017f95",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:subnet/subnet-07a0f6a2b7f39404d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0f6a2b7f39404d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491941013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-private-1"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-private-1"
            },
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "subnet-07a0f6a2b7f39404d",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:subnet/subnet-0d84f049ab9f23ef4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d84f049ab9f23ef4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491941013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-private-2"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-private-2"
            },
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "subnet-0d84f049ab9f23ef4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:subnet/subnet-004b2eadc57aaed5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004b2eadc57aaed5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491941013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-public-1"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-public-1"
            },
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "subnet-004b2eadc57aaed5f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:subnet/subnet-07c2447cca86c183f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c2447cca86c183f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491941013",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-public-2"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-public-2"
            },
            "vpc_id": "vpc-08ce70ffd5eb88801"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "subnet-07c2447cca86c183f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:381491941013:vpc/vpc-08ce70ffd5eb88801",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0221ff2a6f82b07e1",
            "default_route_table_id": "rtb-001ca6334addd946f",
            "default_security_group_id": "sg-043b4901d3da58df7",
            "dhcp_options_id": "dopt-0e1f35e28265a7c28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ce70ffd5eb88801",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001ca6334addd946f",
            "owner_id": "381491941013",
            "region": "us-west-2",
            "tags": {
              "Name": "dynamodb-homework7-vpc"
            },
            "tags_all": {
              "Name": "dynamodb-homework7-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381491941013",
            "id": "vpc-08ce70ffd5eb88801",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}